[tool.poetry]
name = "ned"
version = "0.1.0"
description = ""
authors = ["Federico Falconieri <federico.falconieri@tno.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^7.11.0"
requests = "^2.25.1"
eland = "^7.14.1-beta.1"
click = "^8.0.1"
types-python-dateutil = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
tbump = "^6.3.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
mypy = "^0.910"

[tool.poetry.scripts]
ned = 'ned.cli:produce'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
